--- a/kırkpınar.html
+++ b/kırkpınar.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="kirkpinarstyle.css" type="text/css">
 
 </head>
 
 <body>
-    <div>
+    <div>  <!--Header-->
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">EDİRNE</a>
@@ -43,6 +43,29 @@
             </div>
           </nav>
     </div>
+
+  
+  <div class="Kirkpinarcontainer">
+        <div  class="Kirkpinarimg ">
+        <h2>KIRKPINAR</h2>
+<p>
+  Kırkpınar Yağlı Güreşleri, geleneksel Türk yağlı güreş turnuvası. Her sene haziran ayı sonu ile temmuz ayı başında Edirne'de düzenlenir. Pehlivanlar üç gün süresince er meydanında mücadele ederler. Son gün yapılan finallerde her boyun (kategorinin) birinci, ikinci ve üçüncüleri belirlenir. Bunlardan en önemlisi başpehlivandır. Güreşler esnasında Kırkpınar Festivali düzenlenir ve çeşitli etkinlikler gerçekleştirilir. Yağlı güreş, geleneksel Türk sporları içinde ön sıralarda yer alan bir spor dalıdır. Osmanlı Devleti'nin her yerinde düzenlenen panayırların hepsinde güreş yapılır ama bunların içinde yalnız Kırkpınar’da “baş”ı kazanan pehlivan, gelecek senenin Kırkpınar güreşlerine kadar “başpehlivan” bilinirdi. Bu düşünce günümüzde de devam etmektedir.
+</p>
+  <div class="Kirkpinartext " style="padding-left:0px"> 
+    <img  src="Progeimg/kırkpınar.jpg">
+ 
+</div>
+        </div>
+
+
+      </div>
+   <!--
+<div class="container1">
+  --> 
+
+
+</div>
+
 
 
 
