--- a/proje.html
+++ b/proje.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>EDİRNE</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body style="background-color: #D2D1D1;">
 
-<div> <!-- header kısmı-->
+<section > <!-- header kısmı-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">EDİRNE</a>
     <img src="Progeimg/1650890617.svg" width="40" height="50"  >
@@ -40,7 +40,7 @@
       </ul>
     </div>
   </nav>
-</div>
+</section>
 
 <center><div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" >
   <ol class="carousel-indicators">
