kırkpınar sayfası üzerinde çalışmalar

--- a/kırkpınar.html
+++ b/kırkpınar.html
@@ -46,23 +46,13 @@
 
   
   <div class="Kirkpinarcontainer">
-        <div  class="Kirkpinarimg ">
-        <h2>KIRKPINAR</h2>
-<p>
-  Kırkpınar Yağlı Güreşleri, geleneksel Türk yağlı güreş turnuvası. Her sene haziran ayı sonu ile temmuz ayı başında Edirne'de düzenlenir. Pehlivanlar üç gün süresince er meydanında mücadele ederler. Son gün yapılan finallerde her boyun (kategorinin) birinci, ikinci ve üçüncüleri belirlenir. Bunlardan en önemlisi başpehlivandır. Güreşler esnasında Kırkpınar Festivali düzenlenir ve çeşitli etkinlikler gerçekleştirilir. Yağlı güreş, geleneksel Türk sporları içinde ön sıralarda yer alan bir spor dalıdır. Osmanlı Devleti'nin her yerinde düzenlenen panayırların hepsinde güreş yapılır ama bunların içinde yalnız Kırkpınar’da “baş”ı kazanan pehlivan, gelecek senenin Kırkpınar güreşlerine kadar “başpehlivan” bilinirdi. Bu düşünce günümüzde de devam etmektedir.
-</p>
-  <div class="Kirkpinartext " style="padding-left:0px"> 
-    <img  src="Progeimg/kırkpınar.jpg">
- 
-</div>
-        </div>
+      
 
-
-      </div>
-   <!--
-<div class="container1">
-  --> 
-
+       <div id="yazi1"> 
+         <img id = "resim" src="Progeimg/kırkpınar.jpg" >
+        <h2>    Lorem ipsum dolor, sit amet consectetur adipisicing elit. A reprehenderit autem quae numquam ipsam eum aliquid laboriosam mollitia quis quas?</h2>
+        <img id="resim2" src="Progeimg/kırkpınar2.jpg">
+       </div>
 
 </div>
 
